package at.htl.restrauntmanagement.entity;

public class Reservation {
}
